--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,13 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        kotlin_version = '1.6.0'
     }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.0-alpha02"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.0' apply false
