--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             useSupportLibrary true
         }
         signingConfig signingConfigs.debug
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        buildConfigField "String", "IP_INFO_TOKEN", "\"${properties.getProperty("IP_INFO_TOKEN")}\""
+        buildConfigField "String", "AGRITEC_AUTHORIZATION", "\"Basic ${properties.getProperty("AGRITEC_AUTH")}\""
     }
 
     buildTypes {
@@ -85,6 +89,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.2-beta"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.26.2-beta"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
 
     testImplementation 'junit:junit:4.13.2'
